# django-omnitenant

./: .gitignore  .readthedocs.yaml  Pipfile  README.md  admin.py  conf.py  constants.py  coverage.xml  manage.py  models.py  pytest.ini  requirements.txt  routers.py  tenant_context.py  validators.py
backends/: cache_backend.py  database_backend.py
backends/postgresql/: base.py
config/: asgi.py  celery.py  settings.py  test_settings.py  urls.py  wsgi.py
demo/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
demo/migrations/: 0001_initial.py  0002_patient_alter_hospital_backend_type.py  0003_alter_hospital_config.py  0004_rename_backend_type_hospital_isolation_type_and_more.py  0005_alter_hospital_config.py  (+1 more)
django_omnitenant/: admin.py  apps.py  bootstrap.py  conf.py  constants.py  coverage.xml  exceptions.py  middleware.py  models.py  pyproject.toml  routers.py  signals.py  tenant_context.py  utils.py  validators.py
django_omnitenant/backends/: base.py  cache_backend.py  database_backend.py  schema_backend.py
django_omnitenant/backends/postgresql/: base.py
django_omnitenant/management/commands/: create_tenant.py  migrate_alltenants.py  migrate_tenant.py  migrateee.py  migratetenant.py  migratetenants.py  shell.py  showtenantmigrations.py
django_omnitenant/patches/: cache.py  celery.py
django_omnitenant/resolvers/: __init__.py  base.py  customdomain_resolver.py  subdomain_resolver.py
docs/: django_settings.py  mkdocs.yml  requirements.txt
patches/: cache.py
resolvers/: customdomain_resolver.py
(+44 files in other folders)
