[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-omnitenant"
version = "0.2.3"
description = "Django library for multi-tenancy"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Krishna Rimal"}
]

dependencies = [
  "Django>=3.2"
]

[tool.setuptools.packages.find]
where = ["."]
